--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-
-
-    implementation 'com.google.firebase:firebase-ml-vision:24.0.2'
-    implementation 'com.google.firebase:firebase-ml-vision-object-detection-model:19.0.4'
+    androidTestImplementation 'androdx.test.espresso:espresso-core:3.4.0'
+    
 }
+
+apply plugin: 'com.google.gms.google-services'
